--- a/GestionRestaurants/GestionRestaurants.csproj
+++ b/GestionRestaurants/GestionRestaurants.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Migrations\20190108205702_inicial.cs" />
+    <Compile Remove="Data\Migrations\20190108205702_inicial.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.3" PrivateAssets="All" />
   </ItemGroup>
