Cambio de string de conexion

--- a/GestionRestaurants/appsettings.json
+++ b/GestionRestaurants/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-GestionRestaurants-4D1AC0D4-E370-4311-A717-09BE72D97AD2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=gestion_restaurant;User Id=sa;Password=admin123*;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
